rabbit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq-pod
spec:
  containers:
    - name: rabbitmq-container
      image: rabbitmq:3.9.7
